--- a/src/components/marker.css
+++ b/src/components/marker.css
@@ -1,9 +1,15 @@
 .marker {
-  width: 48x;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 5px;
   background-color: white;
-  border: 1px solid #999;
-  border-radius: 2px;
+  width: 36px;
   text-align: center;
-  padding: 4px;
-  font-size: 18px;
+  font-size: 15px;
+}
+
+.marker.selected {
+  background-color: lightyellow;
+  border-color: black;
+  font-weight: bold;
 }
