--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,16 @@
   top: 0;
   position: sticky;
 }
+
+.search {
+  padding: 10px;
+  margin-right: 5px;
+}
+
+.search input {
+  height: 40px;
+  font-size: 20px;
+  padding-left: 5px;
+  color: #999;
+  width: 100%;
+}
